--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
                 <div id="show" class="text-center d-none">
 
-                  <div class="btn btn-primary">Show All</div>
+                  <div id="show-all" class="btn btn-primary">Show All</div>
 
                 </div>
         </section>
@@ -56,6 +56,29 @@
           </div>
         </section>
 
+
+        <section>
+
+          <!-- Button trigger modal -->
+
+
+<!-- Modal -->
+<div class="modal fade" id="ab" tabindex="-1" aria-labelledby="abLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="abLabel">Modal title</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+     
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-primary">Save changes</button>
+      </div>
+    </div>
+  </div>
+</div>
+        </section>
 
     </main>
     
